objects/DMAPP__Insight_Key_Message__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Benefits__c</fullName>
        <inlineHelpText>List the key benefits linked to this message</inlineHelpText>
        <label>Benefits</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Confidential__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Node__c</fullName>
        <inlineHelpText>Select the Smart Element that you are associating with this message.</inlineHelpText>
        <label>Smart Element</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipLabel>Key Messages</relationshipLabel>
        <relationshipName>Insight_Key_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Message__c</fullName>
        <inlineHelpText>Enter the text of the message</inlineHelpText>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <inlineHelpText>Enter the order in which the message will be displayed within the Smart Element.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Key Message</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Benefits__c</columns>
        <columns>DMAPP__Message__c</columns>
        <columns>DMAPP__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>